# openpilot

./: .gitignore  .gitmodules  AGENTS.md  PLAN.md  SConstruct  compile_commands.json  git_src_commit  git_src_commit_date  imgui.ini  launch_chffrplus.sh  launch_env.sh  launch_openpilot.sh  linear_probe_lead.py  pyproject.toml  review.sh  testing_jenkins
cereal/: log.capnp  services.h  services.py
cereal/messaging/: bridge
common/: api.py  params_keys.h
scripts/: jenkins_loop_test.sh
selfdrive/car/: car_specific.py
selfdrive/debug/: bodyview.py  cycle_alerts.py  uiview.py
selfdrive/locationd/: helpers.py  lagd.py
selfdrive/modeld/: SConscript  action_grid.py  compile_modeld.py  compile_warp.py  constants.py  dmonitoringmodeld.py  helpers.py  modeld.py  parse_model_outputs.py  repro_vision_desire_only.py
selfdrive/monitoring/: helpers.py
selfdrive/pandad/: pandad.cc
selfdrive/selfdrived/: events.py  selfdrived.py
selfdrive/test/: test_onroad.py
selfdrive/ui/: soundd.py  ui.py  ui_state.py
smartcar/: .gitignore  comma4_stream_h264.py  live_dataset.patch  run_slam.sh  setup_orbslam.sh  setup_slam.sh  stream.py  webrtc_feeder.py  webrtc_stream.py
smartcar/orbslam_patches/: comma4_wide.yaml  mono_live.cc
sunnypilot/common/: version.h
system/athena/: athenad.py
system/hardware/: fan_controller.py  hardwared.py
system/loggerd/: SConscript  bootlog  encoderd.cc  loggerd.h
system/manager/: process_config.py
system/ui/: mici_setup.py
system/updated/: updated.py
system/webrtc/: utils.py  webrtcd.py
tools/: cpu_burn.py  op.sh  setup_dependencies.sh  thermal_baseline_plot.py  thermal_baseline_test.py  thermal_bench_10h.py  thermal_benchmark.py  thermal_fan_sim.py  thermal_fleet_extract.py  thermal_model_fit.py  thermal_monitor.py
tools/bodyteleop/: web.py
tools/cabana/: .gitignore  README.md  SConscript  VALIDATION.md  cabana  cabana.cc  cameraview.cc  detailwidget.cc  detailwidget.h  mainwin.cc  mainwin.h  messageswidget.cc  messageswidget.h  panda.cc  panda.h  pjwindow.cc  pjwindow.h  signalview.cc  signalview.h  smoke_test.py  smoketest.cc  smoketest.h  validation_suite.py  videowidget.cc  videowidget.h
tools/cabana/plotjuggler/: .gitmodules  CMakeLists.txt  Dockerfile  README.md  cabana_plotjuggler_widget.cpp  cabana_plotjuggler_widget.h  generate_bootstrap_svgs.py
tools/cabana/plotjuggler/.build/DataLoadRlog_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/DataStreamCereal_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/DataStreamCereal_autogen/include/: ui_datastream_cereal.h
tools/cabana/plotjuggler/.build/QCodeEditor_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/QCodeEditor_autogen/5GMZIIVID3/: qrc_qcodeeditor_resources.cpp
tools/cabana/plotjuggler/.build/ToolboxLuaEditor_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/ToolboxLuaEditor_autogen/include/: ui_lua_editor.h
tools/cabana/plotjuggler/.build/cabana_plotjuggler_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/colorwidgets_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/colorwidgets_autogen/SAAOWJVEWS/: qrc_color_widgets.cpp
tools/cabana/plotjuggler/.build/lua_static_autogen/: deps
tools/cabana/plotjuggler/.build/plotjuggler_app_core_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/plotjuggler_app_core_autogen/include/: ui_aboutdialog.h  ui_cheatsheet_dialog.h  ui_colormap_editor.h  ui_colormap_selector.h  ui_curvelist_panel.h  ui_first_derivative.h  ui_function_editor.h  ui_function_editor_help.h  ui_integral_transform.h  ui_mainwindow.h  ui_moving_average_filter.h  ui_moving_rms.h  ui_multifile_prefix.h  ui_new_release_dialog.h  ui_outlier_removal.h  ui_plot_docker_toolbar.h  ui_plotwidget_editor.h  ui_plotwidget_transforms.h  ui_preferences_dialog.h  ui_scale_transform.h  ui_statistics_dialog.h  ui_suggest_dialog.h  ui_support_dialog.h  ui_transform_selector.h
tools/cabana/plotjuggler/.build/plotjuggler_base_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/plotjuggler_openpilot_common_autogen/: deps
tools/cabana/plotjuggler/.build/plotjuggler_qwt_autogen/: deps
tools/cabana/plotjuggler/.build/qt_advanced_docking_autogen/: deps  mocs_compilation.cpp
tools/cabana/plotjuggler/.build/qt_advanced_docking_autogen/O7EFBWYJL6/: qrc_ads.cpp
tools/cabana/plotjuggler/cmake/: FindCereal.cmake
tools/cabana/plotjuggler/plotjuggler_app/: curve_drag.cpp  curve_drag.h  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  curvelist_view.cpp  customtracker.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_docker.cpp  plot_docker.h  plot_docker_toolbar.cpp  plotwidget.cpp  plotwidget.h  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_transforms.cpp  plotwidget_transforms.h  point_series_xy.cpp  point_series_xy.h  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  realslider.h  resource.qrc  tab_widget.h  tabbedplotwidget.cpp  tabbedplotwidget.h
tools/cabana/plotjuggler/plotjuggler_app/resources/: stylesheet_dark.qss  stylesheet_light.qss
tools/cabana/plotjuggler/plotjuggler_app/transforms/: custom_function.cpp  function_editor.cpp
tools/cabana/plotjuggler/plotjuggler_base/include/PlotJuggler/: messageparser_base.h  plotwidget_base.h  transform_function.h
tools/cabana/plotjuggler/plotjuggler_base/src/: plotmagnifier.cpp  plotwidget_base.cpp  plotzoomer.cpp  timeseries_qwt.cpp  timeseries_qwt.h  transform_function.cpp
tools/cabana/plotjuggler/plotjuggler_plugins/DataLoadRlog/: CMakeLists.txt  dataload_rlog.cpp  rlog_parser.cpp  rlog_parser.hpp
tools/cabana/plotjuggler/plotjuggler_plugins/DataStreamCereal/: CMakeLists.txt  datastream_cereal.cpp
tools/cabana/plotjuggler/plotjuggler_plugins/ToolboxLuaEditor/: lua_editor.cpp  lua_editor.h
tools/cabana_imgui/: .gitignore  PARITY.md  SConscript  cabana_imgui  main.cc
tools/cabana_imgui_validation/: conftest.py  helpers.py
tools/imgui_cabana/: README.md  SConscript  app_state.cc  app_state.h  (+29 more)
(+376 files in other folders)
